# futureproofds

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
.cursor/rules/: chat-clickable-file-paths.mdc  main-branch-explicit-consent.mdc  plan-mode-workflow.mdc  python-314-bracketless-except.mdc  superpowers-brainstorm-docs-gitignored.mdc  uv.mdc
.cursor/skills/git-workflow/: SKILL.md
.cursor/skills/git-workflow-and-versioning/: SKILL.md
.cursor/skills/python-testing-patterns/: SKILL.md
SemanticLayerGPT/: instructions.md  schema_generation.ipynb
SemanticLayerGPT/schemas/: payments.yaml  sessions.yaml  subscriptions.yaml
data-cleaning-agent/: .dockerignore  Dockerfile  README.md  app.py  cleaning_outcome_summary.py  docker-compose.yml  preview_helpers.py  pyproject.toml  row_stats_narrative.py
data-cleaning-agent-new/: README.md
data-cleaning-agent/data/: sample_data.csv
data-cleaning-agent/data_cleaning_agent/: cleaners.py  cleaning_outcome_summary.py  cleaning_pipeline.py  cleaning_plan.py  data_cleaning_agent.py  pipeline_steps.py  plan_column_summary.py  plan_edit_verification.py  plan_generation.py  utils.py
data-cleaning-agent/data_cleaning_agent/prompts/: data_cleaning.md  data_cleaning_code_only.md  data_cleaning_fix.md  data_cleaning_plan.md  data_cleaning_plan_fix.md  data_cleaning_plan_from_code.md
data-cleaning-agent/docs/: plan-edit-verification-design.md
data-cleaning-agent/tests/: conftest.py  test_cleaners.py  test_cleaning_outcome_summary.py  test_cleaning_pipeline.py  test_cleaning_plan.py  test_data_cleaning_agent.py  test_data_cleaning_output_parser.py  test_high_missing_columns.py  test_pipeline_steps.py  test_plan_column_summary.py  test_plan_edit_helpers.py  test_plan_edit_verification.py  test_plan_generation.py  test_preview_helpers.py  test_prompt.py  test_row_plan_stats.py  test_row_stats_narrative.py  test_sanitize_cleaning_plan.py  test_sparse_identifier_columns.py  test_utils.py
docs/data-cleaning-agent/: 2026-05-15-cleaning-readonly-plan-design.md
notebooks/: user_activity_metrics.ipynb
postgres-mcp-server/: .gitignore  README.md  pyproject.toml
postgres-mcp-server/postgres-mcp-server/: main.py
postgres-mcp-server/tests/: test_main.py
semantic-layer-gpt/: instructions.md  schema_generation.ipynb
semantic-layer-gpt/schemas/: users.yaml
simple-data-cleaning-langgraph-workflow/: README.md  pyproject.toml
simple-data-cleaning-langgraph-workflow/workflows/: simple_clean_data_workflow.py
tests/: test_smoke.py
