[project]
name = "futureproofds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "keyring>=25.7.0",
    "pandas>=3.0.2",
    "psycopg[binary]>=3.3.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
