[project]
name = "futureproofds"
version = "0.1.0"
description = "Notebooks and shared analysis utilities for the futureproof DS workspace"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "keyring>=25.7.0",
    "nbformat>=5.10.0",
    "pandas>=3.0.2",
    "plotly>=6.0.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers"]
markers = [
    "unit: fast in-process tests with no external services",
]
