[tool.poetry]
name = "data-cleaning-agent"
version = "0.1.0"
description = "A lightweight data cleaning agent using LangChain and LangGraph"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "data_cleaning_agent"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
langchain = "~0.3.0"
langchain-core = "~0.3.0"
langchain-openai = "~0.2.0"
langgraph = "~0.2.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
streamlit = "^1.28.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
