[project]
name = "postgres-mcp-server"
version = "0.1.0"
description = "PostgreSQL MCP Server for database operations"
authors = [{ name = "Andres Vourakis" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.16.0,<2",
    "python-dotenv>=1.1.1,<2",
    "keyring>=25.7.0",
    "dotenv>=0.9.9",
    "psycopg[binary]>=3.3.3",
]

[tool.uv]
package = false

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
