[project]
name = "simple-data-cleaning-langgraph-workflow"
version = "0.1.0"
description = "Minimal LangGraph workflow demonstrating LLM-driven data cleaning routing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--strict-markers"]

[tool.uv]
package = false

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
